Add logo&header style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,3 +7,28 @@ body{
 	color: #333;
 	margin: 0;
 }
+
+header{
+	background-image: radial-gradient(circle, #72d6c9, #54d1ed,
+#7ac5ff, #bcb2fe, #f29cd9);
+	height: 80px;
+}
+
+.logo{
+	float: left;
+
+}
+nav ul{
+	float: right;
+} 
+.clear{
+	clear: both;
+}
+.nav-logo{
+	color: #e00986; 
+	font-size: 25px; 
+	margin: 0; 
+	padding-left: 15px; 
+	float: left; 
+	line-height: 80px;
+}
