Add hidden menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,3 +32,41 @@ nav ul{
 	float: left; 
 	line-height: 80px;
 }
+nav ul {
+	list-style-type: none;
+	float: right;
+	margin: 0;
+	padding: 0;
+	text-align: center; 
+}
+nav ul li { 
+	display: inline-block; 
+	position: relative;
+	width: 150px;
+}
+a{
+	text-decoration: black;
+	line-height: 80px;
+	padding: 0 10px;
+	display: block;
+}
+nav ul li a:hover { 
+	color: #fff; 
+	transition-duration: 2s;
+}
+
+nav ul ul{
+	background-image: radial-gradient(circle, #72d6c9, #54d1ed, #7ac5ff, #bcb2fe, #f29cd9); 
+	text-align: left; 
+	width: 100%; 
+	border: 1px solid #e00986;
+	display: none;
+}
+nav ul ul li{
+	display: block;
+}
+nav ul li:hover ul{
+	display: block;
+	position: absolute;
+	z-index: 1;
+}
