--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,3 +70,35 @@ nav ul li:hover ul{
 	position: absolute;
 	z-index: 1;
 }
+.hero-section {
+background-image: url(https://images.unsplash.com/photo-
+1499195333224-3ce974eecb47?ixlib=rb-
+0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2cf549433129d4227d1879347b9e78ce&a
+uto=format&fit=crop&w=648&q=80);
+background-size: cover;
+background-position: center;
+height: 300px;
+width: 100%;
+position: relative;
+overflow: hidden;
+}
+.slogan{
+	width: 80%;
+	background: rgba(0,0,0,0.5);
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+}
+.slogan h2{
+	color: white;
+	text-transform: uppercase;
+	text-align: center;
+	padding: 10px 20px;
+}
+.slogan h2 span{
+	color: #e00986;
+}
+.yellow-text{
+	font-size: 40px;
+	color: #fbb619!important;
+}
