Add container style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,3 +102,22 @@ overflow: hidden;
 	font-size: 40px;
 	color: #fbb619!important;
 }
+.container{
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 10px 20px;
+}
+.about-section { 
+	width: 100%; 
+	background-color: #f29cd9; 
+}
+.about-section h2 { 
+	margin: 0; 
+	padding: 20px; 
+	font-size: 30px; 
+} 
+
+.about-section img { 
+	margin: 10px auto 30px; 
+	display: block;
+}
