--- a/src/css/style.css
+++ b/src/css/style.css
@@ -120,3 +120,34 @@ nav ul li:hover ul{
 	margin: 10px auto 30px; 
 	display: block;
 }
+.gallery-section{
+	width: 100%;
+	margin: 0 auto;
+}
+
+.gallery-section h2{
+	margin: 0;
+	padding: 10px;
+	text-align: center;
+	color: #66b8c4
+}
+.gallery-image{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+.gallery-image img{
+	display: flex; 
+	width: 300px; 
+	height: 200px; 
+	object-fit: cover; 
+	margin: 10px 10px; 
+	border: 5px solid white; 
+	-webkit-box-shadow: 4px 4px 24px 1px rgba(224,9,134,0.75); 
+	-moz-box-shadow: 4px 4px 24px 1px rgba(224,9,134,0.75); 
+	box-shadow: 4px 4px 24px 1px rgba(224,9,134,0.75); 
+} 
+.gallery-image img:hover 
+{ 
+	transform:scale(1.15); 
+}
