--- a/src/css/style.css
+++ b/src/css/style.css
@@ -151,3 +151,42 @@ nav ul li:hover ul{
 { 
 	transform:scale(1.15); 
 }
+
+.movie-section{
+	position: relative;
+	height: 400px;
+	background-color: #66b8c4;
+}
+.single-movie{
+	position: absolute;
+	margin: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.icon-section {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	margin: 40px auto;
+}
+.icon {
+	display: block;
+	width: 200px;
+	-webkit-box-shadow: 4px 4px 24px 1px rgba(102,184,196,0.75);
+	-moz-box-shadow: 4px 4px 24px 1px rgba(102,184,196,0.75);
+	box-shadow: 4px 4px 24px 1px rgba(102,184,196,0.75);
+	text-align: center;
+}
+.icon i{
+	font-size: 50px;
+	color: #e00986; 
+	padding: 15px;
+}
+
+.icon p{
+	font-size: 30px;
+}
+.icon p span{
+	font-size: 18px;
+}
