--- a/src/css/style.css
+++ b/src/css/style.css
@@ -201,3 +201,47 @@ footer a {
 	color: #e00986;
 	display: inline-block;
 }
+.contact-section{
+	max-width: 600px;
+	margin: 40px auto;
+	-webkit-box-shadow: 4px 4px 24px 1px rgba(224,9,134,0.75);
+	-moz-box-shadow: 4px 4px 24px 1px rgba(224,9,134,0.75);
+	box-shadow: 4px 4px 24px 1px rgba(224,9,134,0.75);
+}
+form{
+	margin: 0 auto;
+	max-width: 500px;
+	text-align: center;
+}
+label{
+	display: block;
+	text-align: center;
+	padding: 15px; 
+	margin: 10px auto;
+}
+input{
+	display: block; 
+	margin: 0 auto; 
+	height: 40px; 
+	padding: 5px; 
+	border: 1px solid #66b8c4;
+
+}
+textarea{
+	height: 100px;
+	width: 400px;
+	border: 1px solid #66b8c4;
+	display: block;
+	margin: 0 auto;
+}
+input[type="submit"], [type="reset"]{
+	margin: 30px auto; 
+	cursor: pointer; 
+	max-width: 200px; 
+	height: 50px; 
+	font-size: 20px; 
+	background: #f29cd9; 
+	display: inline-block; 
+	border: 1px solid #e00986;
+}
+
